--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-resource": "=1.2.6",
     "angular-cookies": "=1.2.6",
     "angular-sanitize": "=1.2.6",
-    "angular-route": "=1.2.6"
+    "angular-route": "=1.2.6",
+    "mobile-angular-ui": "~1.1.0-beta.21"
   },
   "devDependencies": {
     "angular-mocks": "=1.2.6",
